# factory-test-app-android

./: .gitignore  build.gradle  settings.gradle
GaiaLibrary/: build.gradle
GaiaLibrary-old/: build.gradle
GaiaLibrary/src/main/: AndroidManifest.xml
VMUpgradeLibrary/: build.gradle  proguard-rules.pro
VMUpgradeLibrary-old/: build.gradle
VMUpgradeLibrary-old/src/main/: AndroidManifest.xml
assistantlibrary/: build.gradle
assistantlibrary/src/main/: AndroidManifest.xml
assistantlibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
assistantlibrary/src/main/cpp/inc/: csr_components.h  csr_macro.h  csr_pmem.h  csr_synergy.h  csr_types.h  csr_util.h
assistantlibrary/src/main/cpp/ports/: csr_pmem.c  csr_util.c
assistantlibrary/src/main/cpp/sbc/: csr_cos_cpp.h  csr_mod_math_cpp.h  csr_polyphase.c  csr_polyphase.h  csr_polyphase_analysis.c  csr_polyphase_synthesis.c  csr_sbc.c  csr_sbc.h  csr_sbc_api.h  csr_sbc_dec.c  csr_sbc_enc.c  csr_sbc_memmove.c  csr_sbc_memmove.h
blelibrary/: build.gradle
buttonsfactorynew/: build.gradle
buttonsfactorytest/: build.gradle
buttonsnonomega/: build.gradle
buttonstestcommon/: build.gradle
gaiacontrol/: build.gradle  proguard-rules.pro
gaiacontrol-old/: build.gradle  manifest-merger-debug-report.txt  manifest-merger-release-report.txt
gradle/wrapper/: gradle-wrapper.properties
system-updater/: build.gradle  proguard-rules.pro
tws-library/: build.gradle  google-services.json
twsfactorytest/: build.gradle  proguard-rules.pro
voiceassistant/: build.gradle  version.properties
(+409 files in other folders)
